--- a/CloudComputing_LinkedList/CloudComputing_LinkedList.vcxproj.filters
+++ b/CloudComputing_LinkedList/CloudComputing_LinkedList.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="hashtable.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="skiplist.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="kvs.h">
@@ -36,6 +39,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="hashtable.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="skiplist.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
